manifest and meta

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -14,9 +14,15 @@
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
+    <meta name="author" content="{{ metadata.author.name }}"/>
+    <meta name="theme-color" content="#000000"/>
+    <link rel="manifest" href="{{ '/manifest.json' | url }}"/>
+
 		<!-- Favicon (http://www.favicon-generator.org/) -->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
+    
 
 		<!-- Google Analytics - Global site tag (gtag.js) -->
 		<!-- Paste your Google Anaytics code here. -->
