--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,6 +1,6 @@
 {%- from "layouts/partials/component.njk" import component -%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 
 		<!-- Title -->
