--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,7 +20,7 @@
     <link rel="manifest" href="{{ '/manifest.json' | url }}"/>
 
 		<!-- Favicon (http://www.favicon-generator.org/) -->
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<!-- <link rel="shortcut icon" href="{{ '/assets/images/favicon/favicon.ico' | url }}" type="image/x-icon"/> -->
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
     
 
